# Personalized-learning-navigation-system

./: .gitignore  AIREAD.md  AI_GUIDE.md  LICENSE  README.md
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
backend/: CMakeLists.txt  main.cc
backend/config/: config.json  course_chapter_links.json  knowledge_graph_details.json  learning_resources.json
backend/controllers/: AdminController.cc  AdminController.h  AuthController.cc  AuthController.h  DemoController.cc  DemoController.h  FeedbackController.cc  FeedbackController.h  HealthController.cc  HealthController.h  KnowledgeGraphController.cc  KnowledgeGraphController.h  LearnerProfileController.cc  LearnerProfileController.h  PathPlanningController.cc  PathPlanningController.h  ResourceViewController.cc  ResourceViewController.h  TeacherController.cc  (+7 more)
backend/tests/: AuthSessionServiceTest.cc  CMakeLists.txt  KnowledgeGraphServiceTest.cc  LearnerProfileFeedbackServiceTest.cc  PathAdjusterTest.cc  PathExplanationTest.cc  PathPlannerTest.cc  PathPlanningServiceTest.cc  RoleDashboardServiceTest.cc  TeacherCourseEditServiceTest.cc  TeacherQuestionBankServiceTest.cc  TeacherStudentServiceTest.cc  TestSupport.cc  TestSupport.h  test_main.cc
docs/: 2211410128.docx  Data_Structures_Question_Bank.xls  Interim_report_on_graduation_design.doc  Interim_report_on_graduation_design_filled.md  Interim_report_on_graduation_design_ready_to_paste.md  Table_of_Contents_for_Data_Structures.doc  course-scope.md  demo-runbook.md  development-plan.md  education_kg_translation.docx  education_kg_translation_humanized.docx  progress_check_table_ready_to_paste.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: demo_check.sh  demo_check_down.sh  demo_down.sh  demo_up.sh  generate_translation_docx.js  init_database.sh  install_frontend_deps.sh  install_ubuntu_deps.sh  lib_backend_deps.sh  run_backend.sh  run_frontend.sh  smoke_demo_flow.sh  sync-question-banks.js
(+258 files in other folders)
